[feat] REST API > 최신글 삭제 추가
